# JobQA

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  llm.py
backend/app/generation/: generator.py
backend/app/guardrails/: config.yml
backend/app/ingestion/: job_ingestor.py
backend/app/retrieval/: retriever.py
backend/app/schemas/: queries.py
backend/notebooks/: LlamaIndex notebook.ipynb  NeMo Guardrails.ipynb
backend/src/: main.py
backend/tests/: test_config.py
