[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Elijah Khor <elijahkcm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
llama-index = "^0.11.22"
llama-index-readers-web = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
