[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Elijah Khor <elijahkcm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
llama-index = "^0.11.22"
llama-index-readers-web = "^0.2.4"
llama-index-vector-stores-chroma = "^0.3.0"
pinecone = "^5.3.1"
python-multipart = "^0.0.17"
pdfplumber = "^0.11.4"
llama-index-vector-stores-pinecone = "^0.3.1"
pydantic = "<=2.9.2"
nemoguardrails = "^0.10.1"
openai = "^1.54.3"
langchain-openai = "<0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
